# better-desk-control

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  biome.json  components.html  package.json  rust-toolchain.toml  vite.config.ts
.github/workflows/: ci.yml  release.yml
crates/desk-core/: Cargo.toml
crates/desk-core/src/: controller.rs  event.rs  lib.rs  protocol.rs  reporter.rs  shared.rs
crates/desk-core/src/controller/: command.rs  connection.rs  hold.rs  pairing.rs  preset.rs
desk-cli/: Cargo.toml
desk-cli/src/: main.rs
docs/: ble-sniffing.md  protocol.md
scripts/: bump.mjs
src/: App.tsx  components.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: desk.rs  lib.rs  main.rs  tray.rs  update.rs
src/components/atoms/: Badge.tsx  Button.tsx  Odometer.tsx  SectionLabel.tsx  SignalBars.tsx  Spinner.tsx  Switch.tsx  Tooltip.tsx
src/components/molecules/: AddPresetRow.tsx  ConnectingDeskRow.tsx  DeskRow.tsx  HeightReadout.tsx  PresetRow.tsx  SettingsMenu.tsx
src/components/organisms/: FineAdjust.tsx  Header.tsx  PresetList.tsx
src/components/organisms/overlays/: BluetoothOffOverlay.tsx  ConnectingOverlay.tsx  OverlayShell.tsx  ScanOverlay.tsx  UpdateOverlay.tsx
src/hooks/: useAutostart.ts  useDesk.ts  useFitWindowHeight.ts  useUpdate.ts
src/lib/: desk.ts  presets.ts  units.ts
src/pages/: Gallery.tsx
